--- a/stormwindow/pom.xml
+++ b/stormwindow/pom.xml
@@ -35,6 +35,12 @@
      </dependency>
      
      <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>17.0</version>
+    </dependency>
+     
+     <dependency>
 	         <groupId>commons-io</groupId>
 	         <artifactId>commons-io</artifactId>
 	         <version>2.4</version>
